# ros2_amr_ws

src/all_in_one_package/launch/: all_in_one_launch.py
src/amr_control/: package.xml  setup.py
src/amr_control/amr_control/: section_checker.py  shipment.py  shipment2.py  shipment_backup.py  task_scheduler.py  test.py
src/amr_demo/description/: amr_demo.urdf  amr_demo_center.urdf
src/auto_charge/: package.xml  setup.cfg  setup.py
src/auto_charge/auto_charge/: charge_node.py
src/battery_manager/: package.xml  setup.py
src/battery_manager/battery_manager/: battery_manager.py
src/check_leg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/check_leg/check_leg/: check_node.py  check_node_0430_최근꺼.py  check_node_0726.py  check_node_backup.py  check_node_lqr.py  check_node_slam.py  check_node_test_step5.py
src/serial_test/serial_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/stm_manager/: package.xml  setup.cfg  setup.py
src/stm_manager/stm_manager/: stm_manager.py
